classification
Title: Modules/_ssl.c: extra comma breaks build on AIX
Type: Stage: committed/rejected
Components: Build Versions: Python 3.2, Python 3.1, Python 2.7, Python 2.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: pitrou, srid
Priority: normal Keywords: patch

Created on 2010-04-27 18:31 by srid, last changed 2010-04-27 19:42 by pitrou. This issue is now closed.

Files
File name Uploaded Description Edit
fix-extra-comma-aix.patch srid, 2010-04-27 18:31
Messages (2)
msg104347 - (view) Author: Sridhar Ratnakumar (srid) Date: 2010-04-27 18:31
Modules/_ssl.c

guido@36917	
    64
enum py_ssl_version {
guido@36917	
    65
	PY_SSL_VERSION_SSL2,
guido@36917	
    66
	PY_SSL_VERSION_SSL3,
guido@36917	
    67
	PY_SSL_VERSION_SSL23,
guido@36917	
    68
	PY_SSL_VERSION_TLS1,
guido@36917	
    69
};

Attached patch fixes this issue.
msg104348 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-04-27 19:41
Thank you very much! Committed in r80540 (trunk), r80541 (2.6), r80542 (py3k), r80543 (3.1).
History
Date User Action Args
2010-04-27 19:42:46pitrousetstatus: pending -> closed
2010-04-27 19:41:53pitrousetstatus: open -> pending

versions: + Python 3.2
nosy: + pitrou

messages: + msg104348
resolution: fixed
stage: committed/rejected
2010-04-27 18:31:47sridsetfiles: + fix-extra-comma-aix.patch
keywords: + patch
2010-04-27 18:31:19sridcreate