Issue #8549: Fix compiling the _ssl extension under AIX.  Patch by Sridhar Ratnakumar.